# Intersections_of_segments

./: .gitignore  CMakeLists.txt  EffectiveAlg.cpp  Intersection.cpp  Intersection.h  NaiveAlg.cpp  PSeg.cpp  PSeg.h  README.md  RandomSegments.cpp  RandomSegments.h  Section.cpp  Section.h  Segments.cpp  Segments.h  Tests.cpp  Tests.h  Tree.cpp  Tree.h  main.cpp
data/: Points.txt  SegmentsOut.txt  test3.txt
